# VoidLayer

./: .gitignore  AGENTS.md  CMakeLists.txt  DESIGN.md  README.md
src/: AppHost.cpp  AppHost.h  HotkeyManager.cpp  HotkeyManager.h  Localization.cpp  Localization.h  ReapplyService.cpp  ReapplyService.h  RuleStore.cpp  RuleStore.h  SettingsDialog.cpp  SettingsDialog.h  TransparencyEngine.cpp  TransparencyEngine.h  Types.cpp  Types.h  VoidLayer.rc  WindowResolver.cpp  WindowResolver.h  main.cpp  resource.h
